--- a/MUASAM/MUASAM/Properties/Resources.resx
+++ b/MUASAM/MUASAM/Properties/Resources.resx
@@ -118,7 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="logo for sales company and bag or e-commerce1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo for sales company and bag or e-commerce1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Surrender" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\Surrender.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Surrender (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\Surrender (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo for sales company and bag or e-commerce" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo for sales company and bag or e-commerce.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo for sales company and bag or e-commerce (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo for sales company and bag or e-commerce (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
